# story-continuity-guard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: test.yml
examples/: episode-01-outline-v1.md
scripts/: __init__.py  audit_agent_config.py  validate_story.py
skills/agent-config-security-audit/: SKILL.md
skills/continuity-audit/: SKILL.md
tests/: test_audit_agent_config.py  test_validate_story.py
