[project]
name = "story-continuity-guard"
version = "0.1.0"
description = "Local-first validation for story revisions and continuity metadata"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "taihu777" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing",
]

[project.scripts]
story-continuity-guard = "scripts.validate_story:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
